--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ buildNumber.properties
 *.rar
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Appears when running end-to-end tests. Known Java bug: https://bugs.openjdk.java.net/browse/JDK-8214300
+.attach_pid*
