--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,15 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <show>public</show>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
